--- a/analysis/multi_group_6traits_15weights_ukbb.Rmd
+++ b/analysis/multi_group_6traits_15weights_ukbb.Rmd
@@ -346,7 +346,8 @@ names(pve_vector) <- para$type[1:4]
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Types", palette)
 
 pve_vector <- as.numeric(para[5,3:7])
-names(pve_vector) <- colnames(para)[3:7]
+pve_vector <- c(as.numeric(para[5,2])-sum(pve_vector),pve_vector)
+names(pve_vector) <- c("1SNP",colnames(para)[3:7])
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Tissues", palette)
 
 
@@ -438,9 +439,9 @@ names(pve_vector) <- para$type[1:4]
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Types", palette)
 
 pve_vector <- as.numeric(para[5,3:7])
-names(pve_vector) <- colnames(para)[3:7]
+pve_vector <- c(as.numeric(para[5,2])-sum(pve_vector),pve_vector)
+names(pve_vector) <- c("1SNP",colnames(para)[3:7])
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Tissues", palette)
-
 
 file_res <- paste0("/project/xinhe/xsun/multi_group_ctwas/5.multi_group_testing/results_ukbb/",trait,"/",trait,".finemap_res.RDS")
 finemap_res <- readRDS(file_res)
@@ -526,9 +527,9 @@ names(pve_vector) <- para$type[1:4]
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Types", palette)
 
 pve_vector <- as.numeric(para[5,3:7])
-names(pve_vector) <- colnames(para)[3:7]
+pve_vector <- c(as.numeric(para[5,2])-sum(pve_vector),pve_vector)
+names(pve_vector) <- c("1SNP",colnames(para)[3:7])
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Tissues", palette)
-
 
 file_res <- paste0("/project/xinhe/xsun/multi_group_ctwas/5.multi_group_testing/results_ukbb/",trait,"/",trait,".finemap_res.RDS")
 finemap_res <- readRDS(file_res)
@@ -575,9 +576,9 @@ names(pve_vector) <- para$type[1:4]
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Types", palette)
 
 pve_vector <- as.numeric(para[5,3:7])
-names(pve_vector) <- colnames(para)[3:7]
+pve_vector <- c(as.numeric(para[5,2])-sum(pve_vector),pve_vector)
+names(pve_vector) <- c("1SNP",colnames(para)[3:7])
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Tissues", palette)
-
 
 file_res <- paste0("/project/xinhe/xsun/multi_group_ctwas/5.multi_group_testing/results_ukbb/",trait,"/",trait,".finemap_res.RDS")
 finemap_res <- readRDS(file_res)
@@ -625,9 +626,9 @@ names(pve_vector) <- para$type[1:4]
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Types", palette)
 
 pve_vector <- as.numeric(para[5,3:7])
-names(pve_vector) <- colnames(para)[3:7]
+pve_vector <- c(as.numeric(para[5,2])-sum(pve_vector),pve_vector)
+names(pve_vector) <- c("1SNP",colnames(para)[3:7])
 pve_pie_chart(pve_vector, title = "Pie Chart of PVE across Tissues", palette)
-
 
 file_res <- paste0("/project/xinhe/xsun/multi_group_ctwas/5.multi_group_testing/results_ukbb/",trait,"/",trait,".finemap_res.RDS")
 finemap_res <- readRDS(file_res)
