--- a/analysis/apa_weights_analysis_chenetal.Rmd
+++ b/analysis/apa_weights_analysis_chenetal.Rmd
@@ -61,12 +61,12 @@ para_sum$`%ofpve` <- as.numeric(para_sum$`%ofpve`)*10
 DT::datatable(para_sum,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','parameter estimation'),options = list(pageLength = 5))
 ```
 
-locuz zoom plots for the high pip protein coding genes. 
+locuz zoom plots for the high pip protein coding genes. https://uchicago.box.com/s/16lmma6y8694osfp9v13y9ax7sutlx8y
 
 ```{r}
 load("/project/xinhe/xsun/multi_group_ctwas/3.apa_testing/summary_coding/genedetails_cs_pip08.rdata")
 
-DT::datatable(gene_table_cut_cs,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','genes with pip > 0.8 & in credible sets (the genes whose pos column is na are not protein-coding genes)'),options = list(pageLength = 5))
+DT::datatable(gene_table_cut_cs,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','genes with pip > 0.8 & in credible sets'),options = list(pageLength = 5))
 ```
 
 
